# quant_backtest_v.1

./: .gitignore  CLAUDE.md  INITIAL.md  main.py  pyproject.toml
.claude/: settings.local.json
PRPs/: data-layer.md
quant_backtest/config/: __init__.py  parameters.py  paths.py  universe.py
quant_backtest/data/: __init__.py  fx.py  ingest.py  quality.py  sources.py  store.py
tests/config/: test_universe.py
tests/data/: test_fx.py  test_ingest.py  test_no_lookahead.py  test_quality.py  test_sources.py  test_store.py
