[project]
name = "quant-backtest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "yfinance>=1.4.1",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pandas-stubs>=3.0.3.260530",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[tool.mypy]
python_version = "3.13"

# yfinance ships no type stubs / py.typed marker; allow the untyped import
# without a blanket project-wide relaxation.
[[tool.mypy.overrides]]
module = "yfinance.*"
ignore_missing_imports = true
